add Blog Detail component
